@@ -1,5 +1,11 @@
 2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	[build] Use gnulib module `stdbool'.
+
+	* m4/gnulib-cache.m4 (gl_MODULES): Add `stdbool'.
+
+2010-04-01  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	[build] Use gnulib module `inline'.
 
 	* m4/gnulib-cache.m4 (gl_MODULES): Add `inline'.
